(style): fix tag alignment

--- a/src/styles/components/tags.scss
+++ b/src/styles/components/tags.scss
@@ -12,12 +12,20 @@ $tag-color: $color-bg-darkest;
   color: $tag-color;
   height: 1rem;
   line-height: 1rem;
-  font-size: .9rem;
+  font-size: 1rem;
   padding: 0 .2rem;
 
   &.tag-small {
     height: .9rem;
-    font-size: .8rem;
+    line-height: .9rem;
+    font-size: .75rem;
     padding: 0 .1rem;
+  }
+
+  &.tag-large {
+    height: 1.2rem;
+    line-height: 1.2rem;
+    font-size: 1.2rem;
+    padding: 0 .3rem;
   }
 }
